# KOBLLUX_ORGANIZADO

./: .gitignore  Deus  PORTAL_DE_VOZES.md  README.md  README_PULSO_13.md  README_TREE.md  README_TREE_ASCII.md  myrmide_seed.sh  pyproject.toml  setup_kobllux.sh
MYRMIDE/DUAL/pairs/: SCIART_2467743094302853421_sz33__SCIART_7189249979715475219_sz33.pair.json  SCIART_5804762293847872985_sz33__SCIART_2467743094302853421_sz33.pair.json  SCIART_7189249979715475219_sz33__SCIART_5804762293847872985_sz33.pair.json
MYRMIDE/HUB/: loop.json  manifest.json
MYRMIDE/TRINITY/: SCIART_triple.json
MYRMIDE/UNO/SCIART_2467743094302853421_sz33/original/: SCIART_2467743094302853421_sz33.ascii.txt  SCIART_2467743094302853421_sz33.md  SCIART_2467743094302853421_sz33.report.json
MYRMIDE/UNO/SCIART_5804762293847872985_sz33/original/: SCIART_5804762293847872985_sz33.md  SCIART_5804762293847872985_sz33.report.json
MYRMIDE/UNO/SCIART_5804762293847872985_sz33/rot180/: SCIART_5804762293847872985_sz33.ascii.txt
_index/: CODEX_SCAN_oiDual.json  SCAN_REPORT_oiDual.md
docs/: index.html  manifest.webmanifest  sw.js
kobllux/: __init__.py  api.py  archetypes.py  cli.py  colors.py  cycles.py  fractal.py  geometry.py  narrative.py  prompts.py  system_prompt.py  trinity.py
kobllux/examples/: demo.py  roda_viva.html
kobllux/myrmide/: __init__.py  __main__.py  pipeline.py
kobllux/profiles/: aion.json  artemis.json  atlas.json  genus.json  kaos.json  lumine.json  nova.json  pulse.json  rhea.json  serena.json  solus.json  vitalis.json
web/: index.html
web/archetypes/atlas/js/: UnoFamily.js
(+8 files in other folders)
