[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kobllux"
version = "0.1.0"
description = "Roda Narrativa Geométrica Fractal — KOBLLUX"
authors = [{name="KOBLLUX", email="noreply@example.com"}]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
kobllux = "kobllux.cli:main"

[project.optional-dependencies]
api = ["fastapi>=0.112", "uvicorn>=0.30"]
